# PixMix-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
controller/: IController.h  TextController.cpp  TextController.h
controller/commands/: BlurCommand.cpp  BlurCommand.h  BrightenCommand.cpp  BrightenCommand.h  ColorBoostCommand.cpp  ColorBoostCommand.h  CoolCommand.cpp  CoolCommand.h  DramaticCommand.cpp  DramaticCommand.h  DramaticCoolCommand.cpp  DramaticCoolCommand.h  DramaticWarmCommand.cpp  DramaticWarmCommand.h  FlipCommand.cpp  FlipCommand.h  GreyscaleCommand.cpp  GreyscaleCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  LoadCommand.cpp  LoadCommand.h  LomoCommand.cpp  LomoCommand.h  MagentaCommand.cpp  MagentaCommand.h  NegativeCommand.cpp  NegativeCommand.h  NightVisionCommand.cpp  NightVisionCommand.h  PosterizeCommand.cpp  PosterizeCommand.h  SaturationCommand.cpp  SaturationCommand.h  SaveCommand.cpp  SaveCommand.h  SepiaCommand.cpp  SepiaCommand.h  SharpenCommand.cpp  (+7 more)
controller/io/: IImageLoader.h  IImageSaver.h  ImageLoader.cpp  ImageLoader.h  ImageSaver.cpp  ImageSaver.h
model/: IImage.h  IImageDataBase.h  IPixel.h  ImageDataBaseImpl.cpp  ImageDataBaseImpl.h  ImageImpl.cpp  ImageImpl.h  Pixel.cpp  Pixel.h
model/transformation/: BrightenTransformation.cpp  BrightenTransformation.h  FlipTransformation.cpp  FlipTransformation.h  ITransformation.h  PosterizeTransformation.cpp  PosterizeTransformation.h
model/transformation/color/: AbstractColorTransformation.h  ColorBoostTransformation.h  CoolTransformation.h  DramaticCoolTransformation.h  DramaticTransformation.h  DramaticWarmTransformation.h  GreyscaleTransformation.h  LomoTransformation.h  MagentaTransformation.h  NegativeTransformation.h  NightVisionTransformation.h  SepiaTransformation.h  SilvertoneTransformation.h  SwapTransformation.h  WarmTransformation.h
model/transformation/kernel/: AbstractKernelTransformation.h  BlurTransformation.h  SharpenTransformation.h
model/transformation/saturation/: AbstractSaturationTransformation.h  RetroTransformation.cpp  RetroTransformation.h  SaturationTransformation.h
view/: IView.h  TextView.cpp  TextView.h
